--- a/src/stylesheets/_reset.scss
+++ b/src/stylesheets/_reset.scss
@@ -34,3 +34,6 @@ img {
 legend {
   padding: 0;
 }
+picture {
+  display: block;
+}
