--- a/src/stylesheets/app.scss
+++ b/src/stylesheets/app.scss
@@ -35,9 +35,20 @@
     right: -25px;
   }
 }
+.homepage-partner-logo {
+  display: block;
+}
+.homepage-partner-logo img {
+  margin: auto;
+  max-height: 50px;
+  max-width: 150px;
+}
 
 // ### Carousel
 .js-carousel-item {
+  align-items: center;
+  display: flex;
+  height: 50px;
   transition: opacity 400ms;
 
   &.is-hidden {
@@ -52,6 +63,7 @@
 .frm_forms:not(:first-child) {
   margin-top: $spacing-unit * 3;
 }
+.frm_error,
 .frm_error_style {
   color: $color-warning;
 }
